Truncation is now separate from fixed-height;

--- a/docs/static/ds4/skin.css
+++ b/docs/static/ds4/skin.css
@@ -349,14 +349,14 @@ a.cta-btn {
   text-decoration: none;
   vertical-align: top;
 }
-button.btn[class*='-fixed'],
-button.expand-btn[class*='-fixed'],
-a.fake-btn[class*='-fixed'],
-a.cta-btn[class*='-fixed'],
-button.btn[class*='-fixed'] > span,
-button.expand-btn[class*='-fixed'] > span,
-a.fake-btn[class*='-fixed'] > span,
-a.cta-btn[class*='-fixed'] > span {
+button.btn[class*='-truncated'],
+button.expand-btn[class*='-truncated'],
+a.fake-btn[class*='-truncated'],
+a.cta-btn[class*='-truncated'],
+button.btn[class*='-truncated'] > span,
+button.expand-btn[class*='-truncated'] > span,
+a.fake-btn[class*='-truncated'] > span,
+a.cta-btn[class*='-truncated'] > span {
   line-height: 1.4em;
   overflow: hidden;
   text-overflow: ellipsis;
