--- a/src/less/button/base/button.less
+++ b/src/less/button/base/button.less
@@ -20,8 +20,8 @@ a.cta-btn {
     text-decoration: none;
     vertical-align: top; // with text wrapping, this helps with form control alignment amongts other controls
 
-    &[class*='-fixed'],
-    &[class*='-fixed'] > span {
+    &[class*='-truncated'],
+    &[class*='-truncated'] > span {
         line-height: 1.4em; // fixes fake and cta buttons
         overflow: hidden;
         text-overflow: ellipsis;
